# GOD.util

./: .gitignore  INSATALL.sh  README.md  aligment_parser.py  alignment_parser.py  marian-shuf.sh  setup.sh
BPE_TOOLKIT/: apply_bpe.py  apply_bpe_unk2.py  cleanDuplicateOrderParallax.py  duplicate_filter_pre.sh  duplicate_pre.sh  learn_bpe.py  new_apply_bpe.py  pair_lang_filter.py  pre.sh  pre_mix.sh  unk2_run.sh
MARIAN_script/: decode.sh  gen_scripts.sh  laws_train_en-zh.sh  laws_validate_en-zh.sh  train_zh-en.sh  validate-test-zh.sh
NMT_performance/: context_parser.py  g_context_test.py  model_info.py
TTS_scripts/: count.sh  pre_fake-THCS.py
android/: v7.sh  v8.sh
average_tool/: 1_average_package.sh  3_average_package.sh  average.py  average_package.sh  best_OLD2NEW_package.sh  best_average_package.sh  rm_models.sh  trans_average_package.sh
corpus-script/: Remove_Line.py  change_name.sh  clean_double_len.py  clean_empty_line.py  clean_mono_duplicate.py  corpus2tmx.py  dup.delete.pl  duplicate_clean.py  duplicate_clean_fast.py  even_line.sh  grep_delimeter.py  ja_tokenizer.py  ko_tokenizer.py  parse_xlsx.py  recover_zh_symbols.py  remove_feff.sh  remove_line_by_num_sed.py  remove_line_num.py  remove_utf8.sh  replace2sent.py  single_grep_delimeter.py  split2all.sh  utimate.enzh.sh  utimate.sh
crawl/: extract_clean_mono.py  first.py  msd.py
deployment/: Dockerfile_lang  load.sh  rm.ALL_NONE_IMAGE.sh  s.starter
exam/: decode.dual.sh  decode.sample.sh  decode.sh  decode_validate.sh  detoken.py  final_exam.sh  order_bleu.py  pre_process.sh
jenkins/: ssh.sh
marian.bin/: atools  extract_lex  fast_align
moses-scripts/: moses_train.sh  run_fast.sh
other_tools/: git_remove_files.sh
performance/: cal_lr.py  model_info.py  plt_best_bleu.py  plt_valid.py
python_toolkit/: NER_replacer.py  Remove_Line.py  find_line.py  get_embedding.py  pair_lang_filter.py  replace_UNK.py  revo_remove_line.py  unk_norm.py  viewer.py
python_toolkit/tip-las/: CMakeLists.txt  python_tip.cpp  pytip.py
subword-nmt/: APPLY_BPE.py  preprocess2.sh
super_tokenizer/: install.sh  libboost_python.so.1.65.0  super_tokenizer.py  tmp  tokenize.py  (+2 more)
(+180 files in other folders)
